--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,9 @@ GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
 
 TSR_PARTNER_ID=
 TSR_PARTNER_KEY=
+
+CASSO_API_KEY=
+CASSO_WEBHOOK_SECRET=
+CASSO_API_URL=https://api.casso.vn
+
+SUPER_ADMIN_EMAILS=
