--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,11 @@ CASSO_WEBHOOK_SECRET=
 CASSO_API_URL=https://api.casso.vn
 
 SUPER_ADMIN_EMAILS=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URL=http://127.0.0.1:8000/login/facebook/callback
+
+ZALO_APP_ID=xxxxxxxx
+ZALO_APP_SECRET=xxxxxxxx
+ZALO_REDIRECT_URI=http://127.0.0.1:8000/auth/zalo/callback
